--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "hello this is my project",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "src/index.html",
+    "build": "src/index.html"
   },
   "author": "nikoloz nutsubidze",
   "license": "ISC",
